お店ごとに豆登録できるようにする
